# Muspers-solutions_Platform

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_contact_submissions.py  0003_auth.py
backend/app/: main.py
backend/app/api/: auth.py  contact.py  health.py
backend/app/core/: config.py  cookies.py  deps.py  limiter.py  security.py
backend/app/models/: __init__.py  chat_message.py  client.py  contact_submission.py  diagnostic_session.py  rating.py  refresh_token.py  report.py  user.py
backend/app/schemas/: auth.py  contact.py  user.py
backend/app/services/: auth.py
backend/scripts/: seed_advisor.py
backend/tests/: conftest.py  test_auth.py  test_health.py
frontend/: .env.example  index.html  package-lock.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AuthShell.jsx  Button.jsx  ChatCTA.jsx  ChatFAB.jsx  Footer.jsx  FormField.jsx  Layout.jsx  Navbar.jsx  ProtectedRoute.jsx  Reveal.jsx  UserMenu.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/data/: site.js
frontend/src/pages/: About.jsx  Contact.jsx  Diagnostic.jsx  Home.jsx  NotFound.jsx  Programs.jsx  Services.jsx  Testimonials.jsx
frontend/src/pages/auth/: ForgotPassword.jsx  Login.jsx  Profile.jsx  ResetPassword.jsx  Signup.jsx  VerifyEmail.jsx
frontend/src/services/: api.js  auth.js
reference/muspersolutions.com/: index.html
